# graphiti_sample

./: .cline_rules  .docker-compose.yml.example  .env.example  .gitignore  Dockerfile  README.md  USAGE_GUIDE.md  langgraph.json  pyproject.toml  requirements.txt  task.md  test_custom_entities.py  test_fixed_entities.py
config/: content_filter_config.json  custom_config.json
sample_data/: real_tender.html  sample.html
src/: __init__.py  config_loader.py  exceptions.py  main.py  process_sample_tenders.py  tender_demo.py  tender_processor.py
src/entities/: __init__.py  tender_entities.py
src/episodes/: tender_episodes.py
src/langgraph_integration/: README.md  configuration.py  state.py  utils.py
src/langgraph_integration/api/: __init__.py  models.py  server.py  start_server.py
src/langgraph_integration/demo/: api_call_example.py  interactive_demo.py
src/langgraph_integration/tools/: intent_analyzer.py  llm_result_processor.py  result_formatter.py  tender_search_tools.py
src/langgraph_integration/workflow/: node_functions.py  state_manager.py  tender_search_graph.py
src/parsers/: tender_parser.py
src/scrapers/: __init__.py  tender_scraper.py
