[project]
name = "graphiti_sample"
version = "0.1.0"
description = "Graphiti HTML 內容處理與 Neo4j Docker Compose 範例專案"
requires-python = ">=3.10"
dependencies = [
    "graphiti-core",
    "beautifulsoup4",
    "aiohttp",
    "lxml",
    "html2text",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
