[project]
name = "graphiti_sample"
version = "0.1.0"
description = "Graphiti HTML 內容處理與 Neo4j Docker Compose 範例專案"
requires-python = ">=3.10,<4.0"
dependencies = [
    "graphiti-core",
    "beautifulsoup4",
    "aiohttp",
    "lxml",
    "html2text",
    "pydantic",
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langgraph>=0.4.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langgraph-cli[inmem]>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
